# WinServiceController

./: ProjectInstructions.md  README.md  WinServiceController.slnx
ServiceMonitorCore/: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  INSTALL.vcxproj  INSTALL.vcxproj.filters  ServiceMonitorCore.slnx  ServiceMonitorCore.vcxproj  ServiceMonitorCore.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  vcpkg.json
ServiceMonitorCore/src/: JsonProtocol.h  Logger.cpp  Logger.h  MonitorService.cpp  MonitorService.h  PipeServer.cpp  PipeServer.h  ResourceCollector.cpp  ResourceCollector.h  ServiceBase.cpp  ServiceBase.h  main.cpp
WinServiceController/: App.xaml  App.xaml.cs  WinServiceController.csproj  app.manifest
WinServiceController/Helpers/: EnumToBooleanConverter.cs  InverseBoolConverter.cs
WinServiceController/Models/: AppConfig.cs  IpcMessage.cs  ServiceInfo.cs  UserSettings.cs
WinServiceController/Services/: ApplicationHostService.cs  IPipeClientService.cs  PipeClientService.cs  UserSettingsService.cs
WinServiceController/ViewModels/Pages/: ChartViewModel.cs  DashboardViewModel.cs  ServiceListViewModel.cs  SettingsViewModel.cs
WinServiceController/ViewModels/Windows/: MainWindowViewModel.cs
WinServiceController/Views/Pages/: ChartPage.xaml  ChartPage.xaml.cs  DashboardPage.xaml  DashboardPage.xaml.cs  ServiceListPage.xaml  ServiceListPage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs
WinServiceController/Views/Windows/: MainWindow.xaml  MainWindow.xaml.cs
